<resources>
    <string name="app_name">IT_Corgi</string>
    <string name="sales_icon">Sales</string>
    <string name="logo_of_app_1">IT-</string>
    <string name="logo_of_app_2">Corgi</string>
    <string name="course_start_date">Старт обучения:</string>
    <string name="course_level">Уровень:</string>
    <string name="course_price">Цена:</string>
    <string name="course_decs">9-месячная программа обучения, во время которой ученик получает базовые знания алгоритмов, на практике освоит язык Java и сможет создавать универсальные программы для большинства современных платформ.</string>
    <string name="telephone_o">8 800 576 45 78</string>
    <string name="mail_o">it_corgi@mail.ru</string>
    <string name="telegram_o">itcorgi_help</string>
    <string name="text_about">Онлайн-школа программирования позволит погрузиться в IT-сферу, получить качественное образование, которое поможет стать продвинутым специалистом.
        Несмотря на удаленность обучения, налажен эффективный диалог, ведь существует персональный наставник, который ведет его на протяжении всего обучения.
        Занятия проходят в форме вебинаров длительностью в 2-2,5 часа.
        Особенностями нашей онлайн-школы программирования являются искусственный интеллект IT-Corgi, который является помощником при выполнении заданий и система обучения, которая подстраивается под Ваши увлечения и интересы.</string>
</resources>
